--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="experience">
       <p class="section__text__p1">MAP</p>
       <h1 class="title">Albatrels City</h1>
-      <div class="experience-details-container">
+      <div class="experience-details-container project-content-wrapper">
       <div class="map-container">
         <iframe 
           src="https://gta-5-map.com?embed=light" 
@@ -127,9 +127,9 @@
         </div>
         <div class="overlay">
           <h2 class="project-title">AMYIA THALYAR</h2>
-          <p class="experience-main-title">"It's not rocket science."</p>
+          <p class="experience-main-title">"Chill kill."</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/AMYIA.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -142,7 +142,7 @@
           <h2 class="project-title">BHRE J. BAGASKARA</h2>
           <p class="experience-main-title">"Ars longa vita brevis."</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/BHRE.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -155,7 +155,7 @@
           <h2 class="project-title">CHÉRIESH ROSIEVERT</h2>
           <p class="experience-main-title">If i desire it, naught shall hinder me</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/CHERIESH.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -168,7 +168,7 @@
           <h2 class="project-title">ISLA MARINE</h2>
           <p class="experience-main-title">Blooming slowly, and become my own season.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/ISLA.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
           <h2 class="project-title">JEVINCIO CAVANEAR</h2>
           <p class="experience-main-title">Chaos is my middle name #rispek.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/JEVINCIO.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -194,7 +194,7 @@
           <h2 class="project-title">MADĒBEA BRIDGET</h2>
           <p class="experience-main-title">This primadonna spice up your life, babe.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/MADEBEA.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -207,7 +207,7 @@
           <h2 class="project-title">MILDEN HARGROVE</h2>
           <p class="experience-main-title">Time is what we want most and what we use worst.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/MILDEN.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -220,7 +220,7 @@
           <h2 class="project-title">MORES GALLIO</h2>
           <p class="experience-main-title">Life's a game.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/MORES.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -233,7 +233,7 @@
           <h2 class="project-title">NAAR MAELAYA</h2>
           <p class="experience-main-title">Death must be so beautiful.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NAAR.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -246,7 +246,7 @@
           <h2 class="project-title">RASKAL LAZUARDI</h2>
           <p class="experience-main-title">Tajam pikir, tenang sikap.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/RASKAL.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -260,7 +260,7 @@
           <h2 class="project-title">ZARA MADELYNN</h2>
           <p class="experience-main-title">Fairytales lie.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/ZARA.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -273,7 +273,7 @@
           <h2 class="project-title">BERNADETTE RIBKA</h2>
           <p class="experience-main-title">Straight A in chaos management.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/RIBKA.pdf')">DATABASE</button>
           </div>
         </div>
         </div>
@@ -286,7 +286,7 @@
           <h2 class="project-title">FAY-C NASHAVEENKA</h2>
           <p class="experience-main-title">Satyam Vada, Dharmam Chara.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/FAY-C.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -299,7 +299,7 @@
           <h2 class="project-title">FAYÉNWO JIEV</h2>
           <p class="experience-main-title">Today is your chance to be an explorer.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/JIEV.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -312,7 +312,7 @@
           <h2 class="project-title">GAMAKAÉL RHOVANTHER</h2>
           <p class="experience-main-title">Silentium est fraud, in balance we trust.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/GAMAKAEL.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -325,7 +325,7 @@
           <h2 class="project-title">GREENNESYA JULIETTE</h2>
           <p class="experience-main-title">I connect dots no one else sees, sometimes on purpose.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/GREENNESYA.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -338,7 +338,7 @@
           <h2 class="project-title">HIEROGLIF J'ROUZKILL</h2>
           <p class="experience-main-title">Your expectations aren't my purpose─so STFU.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/HIEROGLIF.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -351,7 +351,7 @@
           <h2 class="project-title">JANUARTA MANUKERTI</h2>
           <p class="experience-main-title">That side hustle is ngabret, bray.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/JANUARTA.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -364,7 +364,7 @@
           <h2 class="project-title">YESSARA ASHAKRIPALA</h2>
           <p class="experience-main-title">It is what it is.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/YESSARA.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
@@ -377,7 +377,7 @@
           <h2 class="project-title">ZACHERY EVERARD</h2>
           <p class="experience-main-title">Do it if you want, don’t if you’re not.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/NONE.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/ZACHERY.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
