--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/STUDENTS-ID.png')"
+            onclick="window.open('./assets/RESIDENCE-ID.png')"
           >
             Download Residence ID
           </button>
