--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           >
             Download Residence ID
           </button>
-          <button class="btn btn-color-1" onclick="window.open('./assets/FINAL_REPORT.pdf')">
+          <button class="btn btn-color-1" onclick="window.open('./assets/FINAL-REPORTS.pdf')">
             Final Crime Report
           </button>
         </div>
