--- a/index.html
+++ b/index.html
@@ -292,19 +292,6 @@
       </div>
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/WANTED/JIEV.jpg" alt="JIEV" class="project-img" />
-          <button class="btn btn-color-1 detail-toggle">DETAILS</button>
-        </div>
-        <div class="overlay">
-          <h2 class="project-title">FAYÉNWO JIEV</h2>
-          <p class="experience-main-title">Today is your chance to be an explorer.</p>
-          <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/JIEV.pdf')">DATABASE</button>
-          </div>
-        </div>
-      </div>
-      <div class="details-container color-container">
-        <div class="article-container">
           <img src="./assets/WANTED/GAMA.jpg" alt="GAMA" class="project-img" />
           <button class="btn btn-color-1 detail-toggle">DETAILS</button>
         </div>
@@ -344,14 +331,27 @@
       </div>
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/WANTED/MANUK.jpg" alt="MANUK" class="project-img" />
+          <img src="./assets/WANTED/ISEN.png" alt="MANUK" class="project-img" />
           <button class="btn btn-color-1 detail-toggle">DETAILS</button>
         </div>
         <div class="overlay">
-          <h2 class="project-title">JANUARTA MANUKERTI</h2>
-          <p class="experience-main-title">That side hustle is ngabret, bray.</p>
+          <h2 class="project-title">ISEN DYLUZ</h2>
+          <p class="experience-main-title">Don't Just Talk, Prove it.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/JANUARTA.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/ISEN.pdf')">DATABASE</button>
+          </div>
+        </div>
+      </div>
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img src="./assets/WANTED/MALOVE.png" alt="MALOVE" class="project-img" />
+          <button class="btn btn-color-1 detail-toggle">DETAILS</button>
+        </div>
+        <div class="overlay">
+          <h2 class="project-title">MALOVE AORUI</h2>
+          <p class="experience-main-title">Be The Best or Be Nothing.</p>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/MALOVE.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
