--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <h2 class="project-title">ISLA MARINE</h2>
           <p class="experience-main-title">Blooming slowly, and become my own season.</p>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/ISLA.pdf')">DATABASE</button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/DATABASE/MARINE.pdf')">DATABASE</button>
           </div>
         </div>
       </div>
