--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           >
             Download Residence ID
           </button>
-          <button class="btn btn-color-1" onclick="window.open('./assets/FINAL-REPORTS.pdf')">
+          <button class="btn btn-color-1" onclick="window.open('https://docs.google.com/spreadsheets/d/1ErjxUUMpCU9odb9GU1dFs3f3RpmZSzVmxNgJZsXMvbk/edit?usp=sharing')">
             Final Crime Report
           </button>
         </div>
